proj card ids blog proj card links

--- a/pages/blog.html
+++ b/pages/blog.html
@@ -88,7 +88,7 @@
                         aria-expanded="true" aria-controls="panelsStayOpen-collapseEight">
                         <h6>blog<span style='color:dodgerblue'>[</span><span style="color:cornflowerblue">8</span><span
                                 style='color:dodgerblue'>]</span></h6>
-                        <h5>xCHANGE Stock Ticker</h5>
+                        <h5>Bad Bank Stock Ticker</h5>
                     </button>
                 </h2>
                 <div id="blog8" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingEight">
