--- a/pages/projects.html
+++ b/pages/projects.html
@@ -68,7 +68,7 @@
 
         <div class="myProjects row container-fluid justify-content-center">
 
-            <div class="card col-sm-4" style="width: 18rem;">
+            <div id='lenovaIncCard' class="card col-sm-4" style="width: 18rem;">
                 <img src="../pics/projects/lenovaIncLogo.gif" class="card-img-top pt-4 mx-auto"
                     alt="LeNova, Inc. animated logo" style="width:12rem;border-radius:0">
                 <div class="card-body">
@@ -85,7 +85,7 @@
                 <cite id='lenovaIncCite' class="text-center">Developed Feb-Apr, 2022</cite>
             </div>
 
-            <div class="card col-sm-4" style="width: 18rem;">
+            <div id='lmnoPhotoCard' class="card col-sm-4" style="width: 18rem;">
                 <img src="../pics/projects/mermaid_camera.gif" class="card-img-top pt-4 mx-auto"
                     alt="Mermaid camera logo" style="width:12rem;">
                 <div class="card-body">
@@ -111,14 +111,14 @@
 
         <div class="myProjects row container-fluid justify-content-center">
 
-            <div class="card col-sm-4" style="width: 18rem;">
+            <div id='xChangeCard' class="card col-sm-4" style="width: 18rem;">
                 <img src="../pics/xchange/giphyxChangeStockTicker.gif" class="card-img-top m-auto"
                     alt="MIT xChange animated gif with stock ticker.">
                 <div class="card-body">
-                    <h5 class="card-title">MIT xCHANGE Bank</h5>
-                    <p class="card-text">This project was customized to include a <span className="text-white">'mock' back-end</span>.</p>
-                    <p class="card-text">Currency exchange data is <span className="text-white">fetched</span> from an <span className="text-white">API</span> and <span className="text-white">rendered</span> in a horizontally scrolling '<span className="text-white">stock ticker</span>,' see <a
-                        href="../pages/blog.html#blog8Button">blog[8]</a></p>
+                    <h5 class="card-title">Currency Exchange Bad Bank</h5>
+                    <p class="card-text">This project was customized to include a <span className="text-white">'mock' database</span>.</p>
+                    <p class="card-text">Exchange rates are <span className="text-white">fetched</span> from an external <span className="text-white">API</span> and <span className="text-white">rendered</span> in an animated <span className="text-white">stock ticker</span>, see <a
+                        href="../pages/blog.html#blog8Button">blog[8]</a>.</p>
                     <div class="btnContainer">
                         <a id='xChangeDemo' href="https://codetracklift.github.io/xchange/" class="btn btn-secondary"
                             target="_blank">Try Demo</a>
@@ -129,7 +129,7 @@
                 <cite id='xChangeCite' class="text-center">Developed Apr-May, 2022</cite>
             </div>
 
-            <div class="card col-sm-4" style="width: 18rem;">
+            <div id='todoCard' class="card col-sm-4" style="width: 18rem;">
                 <img src="../pics/projects/todoDashboard.gif" class="card-img-top mx-auto pt-4"
                     alt="To do dashboard animated gif." style="height:10rem;">
                 <div class="card-body">
@@ -139,7 +139,7 @@
                     <p class="card-text">Customizations: <span>fetching API data</span>
                         with <span>error handling</span>, tasks are
                         retained in <span>local storage</span> and persist through a reload, see <a
-                        href="../pages/blog.html#blog7Button">blog[7]</a></p>
+                        href="../pages/blog.html#blog7Button">blog[7]</a>.</p>
                     <div class="btnContainer">
                         <a id='todoDemo' href="https://codetracklift.github.io/todo/" class="btn btn-secondary"
                             target="_blank">Try Demo</a>
@@ -150,7 +150,7 @@
                 <cite id='todoCite' class="text-center">Developed in Apr, 2022</cite>
             </div>
 
-            <div class="card col-sm-4" style="width: 18rem;">
+            <div id='busTrackerCard' class="card col-sm-4" style="width: 18rem;">
                 <img src="../pics/projects/busTracker.gif" class="card-img-top mx-auto pt-4"
                     alt="Bus tracker project gif." style="height:10rem;">
                 <div class="card-body">
@@ -170,7 +170,7 @@
                 <cite id='busTrackerCite' class="text-center">Developed in Mar, 2022</cite>
             </div>
 
-            <div class="card col-sm-4" style="width: 18rem;">
+            <div id='animatedHeadCard' class="card col-sm-4" style="width: 18rem;">
                 <img src="../pics/projects/animatedHead.gif" class="card-img-top mx-auto pt-4" alt="Animated head image"
                     style="width:10rem;">
                 <div class="card-body">
@@ -190,7 +190,7 @@
                 <cite id='animatedHeadCite' class="text-center">Developed in Mar, 2022</cite>
             </div>
 
-            <div class="card col-sm-4" style="width: 18rem;">
+            <div id='pacManFactoryCard' class="card col-sm-4" style="width: 18rem;">
                 <img src="../pics/pacman/aquaPacMan.png" class="card-img-top mx-auto pt-4"
                     alt="Aqua-PacMan animated gif." style="width:10rem;">
                 <div class="card-body">
@@ -210,7 +210,7 @@
                 <cite id='pacManFactoryCite' class="text-center">Developed in Mar, 2022</cite>
             </div>
 
-            <div class="card col-sm-4" style="width: 18rem;">
+            <div id='pacManMiniGameCard' class="card col-sm-4" style="width: 18rem;">
                 <img src="../pics/pacman/pacmanMiniGame.gif" class="card-img-top mx-auto pt-4" alt="Pac Man image"
                     style="width:8rem;">
                 <div class="card-body">
@@ -240,7 +240,7 @@
 
         <div class="myProjects row container-fluid justify-content-center">
 
-            <div class="card col-sm-4" style="width:18rem;">
+            <div id='pomodoroClockCard' class="card col-sm-4" style="width:18rem;">
                 <img src="../pics/projects/pomodoroClock.jpg" style='width:12rem;' class="card-img-top img-fluid mx-auto"
                     alt="Pomodoro Clock React App">
                 <div class="card-body">
@@ -262,7 +262,7 @@
                 <cite id='pomodoroClockCite' class="text-center">Developed in Apr, 2022</cite>
             </div>
 
-            <div class="card col-sm-4" style="width:18rem;">
+            <div id='markdownPreviewerCard' class="card col-sm-4" style="width:18rem;">
                 <img src="../pics/projects/markdownPreviewer.jpg" class="card-img-top img-fluid"
                     alt="Markdown Previewer React App">
                 <div class="card-body">
@@ -284,7 +284,7 @@
                 <cite id='markdownPreviewerCite' class="text-center">Developed in Apr, 2022</cite>
             </div>
 
-            <div class="card col-sm-4" style="width:18rem;">
+            <div id='jsCalcCard' class="card col-sm-4" style="width:18rem;">
                 <img src="../pics/projects/drumCalc.gif" class="img-fluid mx-auto" alt="Calculator image"
                     style="height:10rem;">
                 <div class="card-body">
@@ -306,7 +306,7 @@
                 <cite id='jsCalcCite' class="text-center">Developed in Jan, 2022</cite>
             </div>
 
-            <div class="card col-sm-4" style="width:18rem;">
+            <div id='etchASketchCard' class="card col-sm-4" style="width:18rem;">
                 <img src="../pics/projects/etch-a-sketch.jpg" class="card-img-top py-4"
                     alt="Screenshot of etch-a-sketch project.">
                 <div class="card-body">
@@ -327,7 +327,7 @@
                 <cite id='etchASketchCite' class="text-center">Developed in Jan, 2022</cite>
             </div>
 
-            <div class="card col-sm-4" style="width: 18rem;">
+            <div id='rockPaperScissorsCard' class="card col-sm-4" style="width: 18rem;">
                 <img src="../pics/projects/rock-paper-scissors.png" class="card-img-top mx-auto"
                     alt="Screenshot of a Rock, Paper, Scissors project." style="width:12rem;">
                 <div class="card-body">
@@ -348,7 +348,7 @@
                 <cite id='rockPaperScissorsCite' class="text-center">Developed in Jan, 2022</cite>
             </div>
 
-            <div class="card col-sm-4" style="width: 18rem;">
+            <div id='odinLandingpageCard' class="card col-sm-4" style="width: 18rem;">
                 <img src="../pics/projects/odin-landingpage.jpg" class="card-img-top mx-auto pt-4"
                     alt="Screenshot of a landingpage project." style="width:12rem;">
                 <div class="card-body">
