--- a/pages/blog.html
+++ b/pages/blog.html
@@ -92,7 +92,7 @@
                     </button>
                 </h2>
                 <div id="blog8" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingEight">
-                    <p class="text-center my-5">Loading...</p>
+                    <div class="text-center my-5"><span class="spinner-border" role="status"></span><p>Loading...</p></div>
                 </div>
             </div> <!-- accodion-item closing div -->
 
@@ -107,7 +107,7 @@
                     </button>
                 </h2>
                 <div id="blog7" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingSeven">
-                    <p class="text-center my-5">Loading...</p>
+                    <div class="text-center my-5"><span class="spinner-border" role="status"></span><p>Loading...</p></div>
                 </div>
             </div> <!-- accodion-item closing div -->
 
@@ -122,7 +122,7 @@
                     </button>
                 </h2>
                 <div id="blog6" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingSix">
-                    <p class="text-center my-5">Loading...</p>
+                    <div class="text-center my-5"><span class="spinner-border" role="status"></span><p>Loading...</p></div>
                 </div>
             </div> <!-- accodion-item closing div -->
 
@@ -137,7 +137,7 @@
                     </button>
                 </h2>
                 <div id="blog5" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingFive">
-                    <p class="text-center my-5">Loading...</p>
+                    <div class="text-center my-5"><span class="spinner-border" role="status"></span><p>Loading...</p></div>
                 </div>
             </div> <!-- accodion-item closing div -->
 
@@ -152,7 +152,7 @@
                     </button>
                 </h2>
                 <div id="blog4" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingFour">
-                    <p class="text-center my-5">Loading...</p>
+                    <div class="text-center my-5"><span class="spinner-border" role="status"></span><p>Loading...</p></div>
                 </div>
             </div> <!-- accodion-item closing div -->
 
@@ -167,7 +167,7 @@
                     </button>
                 </h2>
                 <div id="blog3" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingThree">
-                    <p class="text-center my-5">Loading...</p>
+                    <div class="text-center my-5"><span class="spinner-border" role="status"></span><p>Loading...</p></div>
                 </div>
             </div> <!-- accodion-item closing div -->
 
@@ -182,7 +182,7 @@
                     </button>
                 </h2>
                 <div id="blog2" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingTwo">
-                    <p class="text-center my-5">Loading...</p>
+                    <div class="text-center my-5"><span class="spinner-border" role="status"></span><p>Loading...</p></div>
                 </div>
             </div> <!-- accodion-item closing div -->
 
@@ -197,7 +197,7 @@
                     </button>
                 </h2>
                 <div id="blog1" class="accordion-collapse collapse bg-transparent" aria-labelledby="panelsStayOpen-headingOne">
-                    <p class="text-center my-5">Loading...</p>
+                    <div class="text-center my-5"><span class="spinner-border" role="status"></span><p>Loading...</p></div>
                 </div>
             </div> <!-- accodion-item closing div -->
 
@@ -212,7 +212,7 @@
                     </button>
                 </h2>
                 <div id="blog0" class="accordion-collapse collapse bg-transparent" aria-labelledby="panelsStayOpen-headingZero">
-                    <p class="text-center my-5">Loading...</p>
+                    <div class="text-center my-5"><span class="spinner-border" role="status"></span><p>Loading...</p></div>
                 </div>
             </div><!-- accodion-item closing div -->
 
