--- a/pages/resume.html
+++ b/pages/resume.html
@@ -63,7 +63,7 @@
 
         <section class="container-fluid text-end mt-4 w-75" style="max-width: 900px">
             <a href="../pics/resumeByPete.pdf" download>
-                <span class="textShadowBlack text-white fst-italic opacity-50">resume<span
+                <span class="fs-3 textShadowBlack text-white fst-italic opacity-75">resume<span
                         style="color:#00857c">By</span><span style="color:lime">Pete</span></span>
                 <img id='downloadIcon' src="../pics/about/downloadCloudIcon.gif" class='img-fluid dropShadow'
                     alt="Download cloud icon">
