xch proj wordsm

--- a/pages/projects.html
+++ b/pages/projects.html
@@ -116,8 +116,8 @@
                     alt="MIT xChange animated gif with stock ticker.">
                 <div class="card-body">
                     <h5 class="card-title">Currency Exchange Bad Bank</h5>
-                    <p class="card-text">This project was customized to include a <span className="text-white">'mock' database</span>.</p>
-                    <p class="card-text">Exchange rates are <span className="text-white">fetched</span> from an external <span className="text-white">API</span> and <span className="text-white">rendered</span> in an animated <span className="text-white">stock ticker</span>, see <a
+                    <p class="card-text">This React App includes a 'mock'<span className="text-white"> database</span> with <span class="text-white">input validation</span>.</p>
+                    <p class="card-text">Data is<span className="text-white"> fetched </span>from an <span className="text-white">API</span> and <span className="text-white">rendered</span> in an animated <span className="text-white">stock ticker</span>, see <a
                         href="../pages/blog.html#blog8Button">blog[8]</a>.</p>
                     <div class="btnContainer">
                         <a id='xChangeDemo' href="https://codetracklift.github.io/xchange/" class="btn btn-secondary"
