proj sort btn styles

--- a/pages/projects.html
+++ b/pages/projects.html
@@ -66,7 +66,7 @@
         </div>
 
         <div class="container-fluid myArticles text-center" id="sortBox">
-            <h6 class="text-silver">Sort Projects By:</h6>
+            <h6 class="text-silver">Sort Projects By</h6>
             <div class="text-gray" id="sortButtons">
                 <button id='categoryButton' onclick="injectProjectsCategory()">Category</button><span class="fs-4 fw-bolder"> &#8226; </span>
                 <button id='newestButton' onclick="injectProjectsNewest()">Newest</button><span class="fs-4 fw-bolder"> &#8226; </span>
