proj sort btn, rem onclick active btn

--- a/pages/projects.html
+++ b/pages/projects.html
@@ -62,7 +62,7 @@
         </section>
 
         <div class="container-fluid myArticles text-center mb-4">
-            <h6 class="menloRegular text-gray mb-5">/* myCodingJourney started in Dec, 2021. Please visit again, more projects are in development... */</h6>
+            <h6 class="menloRegular text-gray mb-5">/* myCodingJourney started in Dec 2021 */</h6>
         </div>
 
         <div class="container-fluid myArticles text-center" id="sortBox">
