--- a/pages/projects.html
+++ b/pages/projects.html
@@ -144,6 +144,8 @@
     <script src="../js/selfTaught/rockPaperScissorsCard.js"></script>
     <script src="../js/selfTaught/odinLandingpageCard.js"></script>
 
+    <script src="../js/projectsList.js"></script>
+
     <script>
         injectMyNavbar();
         setActiveNavlink('navlinkProjects');
