proj html sort btn onclick rem

--- a/pages/projects.html
+++ b/pages/projects.html
@@ -68,9 +68,9 @@
         <div class="container-fluid myArticles text-center" id="sortBox">
             <h6 class="text-silver">Sort Projects By</h6>
             <div class="text-gray" id="sortButtons">
-                <button id='categoryButton' onclick="injectLoading();changeCategoryButton();setTimeout(injectProjectsCategory,500)">Category</button>
-                <button id='newestButton' onclick="injectLoading();changeNewestButton();setTimeout(injectProjectsNewest,500)">Newest</button>
-                <button id='oldestButton' onclick="injectLoading();changeOldestButton();setTimeout(injectProjectsOldest,500)">Oldest</button>
+                <button id='categoryButton'>Category</button>
+                <button id='newestButton'>Newest</button>
+                <button id='oldestButton'>Oldest</button>
             </div>
         </div>
 
