--- a/pages/projects.html
+++ b/pages/projects.html
@@ -132,6 +132,7 @@
 
     <script src="../js/bootcamp/xChangeCard.js"></script>
     <script src="../js/bootcamp/todoCard.js"></script>
+    <script src="../js/bootcamp/cBPCard.js"></script>
     <script src="../js/bootcamp/busTrackerCard.js"></script>
     <script src="../js/bootcamp/animatedHeadCard.js"></script>
     <script src="../js/bootcamp/pacManFactoryCard.js"></script>
