--- a/pages/projects.html
+++ b/pages/projects.html
@@ -68,8 +68,8 @@
         <div class="container-fluid myArticles text-center" id="sortBox">
             <h6 class="text-silver">Sort Projects By</h6>
             <div class="text-gray" id="sortButtons">
+                <button id='featuredButton'>Featured</button>
                 <button id='categoryButton'>Category</button>
-                <button id='newestButton'>Newest</button>
                 <button id='oldestButton'>Oldest</button>
             </div>
         </div>
@@ -151,8 +151,8 @@
         injectMyNavbar();
         setActiveNavlink('navlinkProjects');
         injectMyFooter();
-        injectProjectsCategory();
-        changeCategoryButton();
+        injectProjectsFeatured();
+        changeFeaturedButton();
     </script>
 </body>
 
