proj default category

--- a/pages/projects.html
+++ b/pages/projects.html
@@ -151,8 +151,8 @@
         injectMyNavbar();
         setActiveNavlink('navlinkProjects');
         injectMyFooter();
-        injectProjectsFeatured();
-        changeFeaturedButton();
+        injectProjectsCategory();
+        changeCategoryButton();
     </script>
 </body>
 
