blog responsive dates

--- a/pages/blog.html
+++ b/pages/blog.html
@@ -86,9 +86,12 @@
                     <button id='blog8Button' onclick="blog8Open()" class="accordion-button collapsed bg-transparent"
                         type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseEight"
                         aria-expanded="true" aria-controls="panelsStayOpen-collapseEight">
-                        <h6>blog<span style='color:dodgerblue'>[</span><span style="color:cornflowerblue">8</span><span
+                        <h6 class="my-auto">blog<span style='color:dodgerblue'>[</span><span style="color:cornflowerblue">8</span><span
                                 style='color:dodgerblue'>]</span></h6>
-                        <h5>Bad Bank Stock Ticker</h5>
+                        <h5 class="w-100 my-auto">Bad Bank Stock Ticker</h5>
+                        <div class="d-none d-sm-none d-md-block w-50 text-end">
+                            <p class="text-gray my-auto">May 13, 2022</p>
+                        </div>
                     </button>
                 </h2>
                 <div id="blog8" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingEight">
@@ -101,9 +104,12 @@
                     <button id='blog7Button' onclick="blog7Open()" class="accordion-button collapsed bg-transparent"
                         type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseSeven"
                         aria-expanded="true" aria-controls="panelsStayOpen-collapseSeven">
-                        <h6>blog<span style='color:dodgerblue'>[</span><span style="color:cornflowerblue">7</span><span
+                        <h6 class="my-auto">blog<span style='color:dodgerblue'>[</span><span style="color:cornflowerblue">7</span><span
                                 style='color:dodgerblue'>]</span></h6>
-                        <h5>To-Do Dashboard</h5>
+                        <h5 class="w-100 my-auto">To-Do Dashboard</h5>
+                        <div class="d-none d-sm-none d-md-block w-50 text-end">
+                            <p class="text-gray my-auto">Apr 23, 2022</p>
+                        </div>
                     </button>
                 </h2>
                 <div id="blog7" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingSeven">
@@ -116,9 +122,12 @@
                     <button id='blog6Button' onclick="blog6Open()" class="accordion-button collapsed bg-transparent"
                         type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseSix"
                         aria-expanded="true" aria-controls="panelsStayOpen-collapseSix">
-                        <h6>blog<span style='color:dodgerblue'>[</span><span style="color:cornflowerblue">6</span><span
+                        <h6 class="my-auto">blog<span style='color:dodgerblue'>[</span><span style="color:cornflowerblue">6</span><span
                                 style='color:dodgerblue'>]</span></h6>
-                        <h5>Real-Time Bus Tracker</h5>
+                        <h5 class="w-100 my-auto">Real-Time Bus Tracker</h5>
+                        <div class="d-none d-sm-none d-md-block w-50 text-end">
+                            <p class="text-gray my-auto">Mar 22, 2022</p>
+                        </div>
                     </button>
                 </h2>
                 <div id="blog6" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingSix">
@@ -131,9 +140,12 @@
                     <button id='blog5Button' onclick="blog5Open()" class="accordion-button collapsed bg-transparent"
                         type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseFive"
                         aria-expanded="true" aria-controls="panelsStayOpen-collapseFive">
-                        <h6>blog<span style='color:dodgerblue'>[</span><span style="color:cornflowerblue">5</span><span
+                        <h6 class="my-auto">blog<span style='color:dodgerblue'>[</span><span style="color:cornflowerblue">5</span><span
                                 style='color:dodgerblue'>]</span></h6>
-                        <h5>PacMan Factory & Eye Movement</h5>
+                        <h5 class="w-100 my-auto">PacMan Factory & Eye Movement</h5>
+                        <div class="d-none d-sm-none d-md-block w-50 text-end">
+                            <p class="text-gray my-auto">Mar 15, 2022</p>
+                        </div>
                     </button>
                 </h2>
                 <div id="blog5" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingFive">
@@ -146,9 +158,12 @@
                     <button id='blog4Button' onclick="blog4Open()" class="accordion-button collapsed bg-transparent"
                         type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseFour"
                         aria-expanded="true" aria-controls="panelsStayOpen-collapseFour">
-                        <h6>blog<span style='color:dodgerblue'>[</span><span style="color:cornflowerblue">4</span><span
+                        <h6 class="my-auto">blog<span style='color:dodgerblue'>[</span><span style="color:cornflowerblue">4</span><span
                                 style='color:dodgerblue'>]</span></h6>
-                        <h5>Custom CSS Typewriter</h5>
+                        <h5 class="w-100 my-auto">Custom CSS Typewriter</h5>
+                        <div class="d-none d-sm-none d-md-block w-50 text-end">
+                            <p class="text-gray my-auto">Mar 5, 2022</p>
+                        </div>
                     </button>
                 </h2>
                 <div id="blog4" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingFour">
@@ -161,9 +176,12 @@
                     <button id='blog3Button' onclick="blog3Open()" class="accordion-button collapsed bg-transparent"
                         type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseThree"
                         aria-expanded="true" aria-controls="panelsStayOpen-collapseThree">
-                        <h6>blog<span style='color:dodgerblue'>[</span><span style="color:cornflowerblue">3</span><span
+                        <h6 class="my-auto">blog<span style='color:dodgerblue'>[</span><span style="color:cornflowerblue">3</span><span
                                 style='color:dodgerblue'>]</span></h6>
-                        <h5>PacMan Mini-Game</h5>
+                        <h5 class="w-100 my-auto">PacMan Mini-Game</h5>
+                        <div class="d-none d-sm-none d-md-block w-50 text-end">
+                            <p class="text-gray my-auto">Feb 27, 2022</p>
+                        </div>
                     </button>
                 </h2>
                 <div id="blog3" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingThree">
@@ -176,9 +194,12 @@
                     <button id='blog2Button' onclick="blog2Open()" class="accordion-button collapsed bg-transparent"
                         type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseTwo"
                         aria-expanded="false" aria-controls="panelsStayOpen-collapseTwo">
-                        <h6>blog<span style='color:dodgerblue'>[</span><span style="color:cornflowerblue">2</span><span
+                        <h6 class="my-auto">blog<span style='color:dodgerblue'>[</span><span style="color:cornflowerblue">2</span><span
                                 style='color:dodgerblue'>]</span></h6>
-                        <h5>Magic Ball Challenge</h5>
+                        <h5 class="w-100 my-auto">Magic Ball Challenge</h5>
+                        <div class="d-none d-sm-none d-md-block w-50 text-end">
+                            <p class="text-gray my-auto">Feb 20, 2022</p>
+                        </div>
                     </button>
                 </h2>
                 <div id="blog2" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingTwo">
@@ -191,9 +212,12 @@
                     <button id='blog1Button' onclick="blog1Open()" class="accordion-button collapsed bg-transparent"
                         type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseOne"
                         aria-expanded="false" aria-controls="panelsStayOpen-collapseOne">
-                        <h6>blog<span style='color:dodgerblue'>[</span><span style="color:cornflowerblue">1</span><span
+                        <h6 class="my-auto">blog<span style='color:dodgerblue'>[</span><span style="color:cornflowerblue">1</span><span
                                 style='color:dodgerblue'>]</span></h6>
-                        <h5>Creating a GitHub Website</h5>
+                        <h5 class="w-100 my-auto">Creating a GitHub Website</h5>
+                        <div class="d-none d-sm-none d-md-block w-50 text-end">
+                            <p class="text-gray my-auto">Feb 16, 2022</p>
+                        </div>
                     </button>
                 </h2>
                 <div id="blog1" class="accordion-collapse collapse bg-transparent" aria-labelledby="panelsStayOpen-headingOne">
@@ -206,9 +230,12 @@
                     <button id='blog0Button' onclick='blog0Open()' class="accordion-button collapsed bg-transparent"
                         type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseZero"
                         aria-expanded="false" aria-controls="panelsStayOpen-collapseZero">
-                        <h6>blog<span style='color:dodgerblue'>[</span><span style="color:cornflowerblue">0</span><span
+                        <h6 class="my-auto">blog<span style='color:dodgerblue'>[</span><span style="color:cornflowerblue">0</span><span
                                 style='color:dodgerblue'>]</span></h6>
-                        <h5>Coding Bootcamp Introduction</h5>
+                        <h5 class="w-100 my-auto">Coding Bootcamp Introduction</h5>
+                        <div class="d-none d-sm-none d-md-block w-50 text-end">
+                            <p class="text-gray my-auto">Feb 9, 2022</p>
+                        </div>
                     </button>
                 </h2>
                 <div id="blog0" class="accordion-collapse collapse bg-transparent" aria-labelledby="panelsStayOpen-headingZero">
