--- a/pages/about.html
+++ b/pages/about.html
@@ -33,6 +33,7 @@
 
     <!-- My CSS -->
     <link rel="stylesheet" href="../css/global.css">
+    <link rel="stylesheet" href="../css/footer.css">
     <link rel="stylesheet" href="../css/navbar.css">
     <link rel="stylesheet" href="../css/typewriter_cTL.css">
     <link rel="stylesheet" href="../css/cards.css">
@@ -173,6 +174,7 @@
 
     </main>
 
+    <section id="socials" class="container-fluid"></section>
     <footer id="footer" class="container-fluid"></footer>
 
     <!-- JS Libraries -->
@@ -181,11 +183,13 @@
 
     <!-- My JS -->
     <script src="../js/navbar.js"></script>
+    <script src="../js/socials.js"></script>
     <script src="../js/footer.js"></script>
     <script src="../js/about.js"></script>
     <script>
         injectMyNavbar();
         setActiveNavlink('navlinkAbout');
+        injectSocials();
         injectMyFooter();
     </script>
 </body>
