--- a/pages/blog.html
+++ b/pages/blog.html
@@ -33,6 +33,7 @@
 
     <!-- My CSS -->
     <link rel="stylesheet" href="../css/global.css">
+    <link rel="stylesheet" href="../css/footer.css">
     <link rel="stylesheet" href="../css/navbar.css">
     <link rel="stylesheet" href="../css/cards.css">
     <link rel="stylesheet" href="../css/blog.css">
@@ -278,6 +279,7 @@
 
     </main>
 
+    <section id="socials" class="container-fluid"></section>
     <footer id="footer" class="container-fluid"></footer>
 
     <!-- JS Libraries -->
@@ -296,10 +298,12 @@
     <script src='../js/blogs/blog2.js'></script>
     <script src='../js/blogs/blog1.js'></script>
     <script src='../js/blogs/blog0.js'></script>
+    <script src="../js/socials.js"></script>
     <script src="../js/footer.js"></script>
     <script>
         injectMyNavbar();
         setActiveNavlink('navlinkBlog');
+        injectSocials();
         injectMyFooter();
     </script>
 </body>
