--- a/pages/contact.html
+++ b/pages/contact.html
@@ -33,6 +33,7 @@
 
     <!-- My CSS -->
     <link rel="stylesheet" href="../css/global.css">
+    <link rel="stylesheet" href="../css/footer.css">
     <link rel="stylesheet" href="../css/navbar.css">
     <link rel="stylesheet" href="../css/typewriter_cTL.css">
     <link rel="stylesheet" href="../css/cards.css">
@@ -183,6 +184,7 @@
 
     </main>
 
+    <section id="socials" class="container-fluid"></section>
     <footer id="footer" class="container-fluid"></footer>
 
     <!-- JS Libraries -->
@@ -193,10 +195,12 @@
     <script src="../js/navbar.js"></script>
     <script src="../js/cards.js"></script>
     <script src="../js/contact.js"></script>
+    <script src="../js/socials.js"></script>
     <script src="../js/footer.js"></script>
     <script>
         injectMyNavbar();
         setActiveNavlink('navlinkContact');
+        injectSocials();
         injectMyFooter();
     </script>
 </body>
