--- a/pages/projects.html
+++ b/pages/projects.html
@@ -33,6 +33,7 @@
 
     <!-- My CSS -->
     <link rel="stylesheet" href="../css/global.css">
+    <link rel="stylesheet" href="../css/footer.css">
     <link rel="stylesheet" href="../css/navbar.css">
     <link rel="stylesheet" href="../css/typewriter_sIL.css">
     <link rel="stylesheet" href="../css/cards.css">
@@ -115,7 +116,8 @@
         </div>
 
     </main>
-
+    
+    <section id="socials" class="container-fluid"></section>
     <footer id="footer" class="container-fluid"></footer>
 
     <!-- JS Libraries -->
@@ -125,6 +127,7 @@
     <!-- My JS -->
     <script src="../js/navbar.js"></script>
     <script src="../js/projects.js"></script>
+    <script src="../js/socials.js"></script>
     <script src="../js/footer.js"></script>
 
     <script src="../js/business/lenovaIncCard.js"></script>
@@ -151,6 +154,7 @@
     <script>
         injectMyNavbar();
         setActiveNavlink('navlinkProjects');
+        injectSocials();
         injectMyFooter();
         injectProjectsCategory();
         changeCategoryButton();
