--- a/pages/resume.html
+++ b/pages/resume.html
@@ -33,6 +33,7 @@
 
     <!-- My CSS -->
     <link rel="stylesheet" href="../css/global.css">
+    <link rel="stylesheet" href="../css/footer.css">
     <link rel="stylesheet" href="../css/navbar.css">
     <link rel="stylesheet" href="../css/cards.css">
     <link rel="stylesheet" href="../css/resume.css">
@@ -395,6 +396,7 @@
 
     </main>
 
+    <section id="socials" class="container-fluid"></section>
     <footer id="footer" class="container-fluid"></footer>
 
     <!-- JS Libraries -->
@@ -404,10 +406,12 @@
     <!-- My JS -->
     <script src="../js/navbar.js"></script>
     <script src="../js/resume.js"></script>
+    <script src="../js/socials.js"></script>
     <script src="../js/footer.js"></script>
     <script>
         injectMyNavbar();
         setActiveNavlink('navlinkResume');
+        injectSocials();
         injectMyFooter();
     </script>
 </body>
