--- a/pages/welcome.html
+++ b/pages/welcome.html
@@ -33,6 +33,7 @@
 
     <!-- My CSS -->
     <link rel="stylesheet" href="../css/global.css">
+    <link rel="stylesheet" href="../css/footer.css">
     <link rel="stylesheet" href="../css/navbar.css">
     <link rel="stylesheet" href="../css/welcomeAnimations.css">
     <link rel="stylesheet" href="../css/cards.css">
@@ -93,6 +94,7 @@
         </div>
     </div>
 
+    <section id="socials" class="container-fluid"></section>
     <footer id="footer" class="container-fluid"></footer>
 
     <!-- JS Libraries -->
@@ -102,6 +104,7 @@
     <!-- My JS -->
     <script src="../js/navbar.js"></script>
     <script src="../js/welcome.js"></script>
+    <script src="../js/socials.js"></script>
     <script src="../js/footer.js"></script>
     <script>
         injectMyNavbar();
@@ -112,6 +115,7 @@
         setTimeout(initScrollMagic, 3100);
         setTimeout(unhideCarousel, 3100);
         setTimeout(injectMyFooter, 3000);
+        setTimeout(injectSocials, 3000);
         setTimeout(footerBackground, 3100);
     </script>
 </body>
