--- a/pages/resume.html
+++ b/pages/resume.html
@@ -370,7 +370,7 @@
                 <div class="carousel-item active">
                     <h3 class="px-5 text-gray textShadowBlack" style="font-style:italic;">"Pharmaceutical experience
                         drives my Good Documentation Practices (GDPs)."</h3>
-                    <figcaption class="blockquote-footer text-end mt-3 mx-5">
+                    <figcaption class="blockquote-footer text-end mt-3 mx-5 pb-5">
                         <cite title="Source Title" class="text-white" style="opacity:0.6;">quote<span
                                 style="color:#00857c">By</span><span style="color:lime">Pete</span></cite>
                     </figcaption>
@@ -378,7 +378,7 @@
                 <div class="carousel-item">
                     <h3 class="px-5 text-gray textShadowBlack" style="font-style:italic;">"Front-load effort, spend time
                         to understand the problem before proposing a solution."</h3>
-                    <figcaption class="blockquote-footer text-end mt-3 mx-5">
+                    <figcaption class="blockquote-footer text-end mt-3 mx-5 pb-5">
                         <cite title="Source Title" class="text-white" style="opacity:0.6;">quote<span
                                 style="color:#00857c">By</span><span style="color:lime">Pete</span></cite>
                     </figcaption>
@@ -386,7 +386,7 @@
                 <div class="carousel-item">
                     <h3 class="px-5 text-gray textShadowBlack" style="font-style:italic;">"Successful projects are
                         planned before implementation, and tested before release."</h3>
-                    <figcaption class="blockquote-footer text-end mt-3 mx-5">
+                    <figcaption class="blockquote-footer text-end mt-3 mx-5 pb-5">
                         <cite title="Source Title" class="text-white" style="opacity:0.6;">quote<span
                                 style="color:#00857c">By</span><span style="color:lime">Pete</span></cite>
                     </figcaption>
