--- a/pages/projects.html
+++ b/pages/projects.html
@@ -69,8 +69,8 @@
         <div class="container-fluid myArticles text-center" id="sortBox">
             <h6 class="text-silver">Sort Projects By</h6>
             <div class="text-gray" id="sortButtons">
-                <button id='featuredButton'>Featured</button>
                 <button id='categoryButton'>Category</button>
+                <button id='featuredButton'>Featured</button>
                 <button id='oldestButton'>Oldest</button>
             </div>
         </div>
@@ -157,8 +157,8 @@
         setActiveNavlink('navlinkProjects');
         injectSocials();
         injectMyFooter();
-        injectProjectsCategory();
-        changeCategoryButton();
+        injectProjectsFeatured();
+        changeFeaturedButton();
     </script>
 </body>
 
