--- a/pages/blog.html
+++ b/pages/blog.html
@@ -82,6 +82,25 @@
 
         <div class="accordion myBlog mx-auto">
 
+            <!-- <div class="accordion-item">
+                <h2 class="accordion-header">
+                    <button id='blog9Button' onclick="blog9Open()" class="accordion-button collapsed bg-transparent"
+                        type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseEight"
+                        aria-expanded="true" aria-controls="panelsStayOpen-collapseEight">
+                        <h6 class="my-auto">blog<span style='color:dodgerblue'>[</span><span style="color:cornflowerblue">9</span><span
+                                style='color:dodgerblue'>]</span></h6>
+                        <h5 class="w-100 my-auto">Front End Architecture</h5>
+                        <div class="d-none d-sm-none d-md-block w-50 text-end">
+                            <p class="text-gray my-auto">May 31, 2022</p>
+                        </div>
+                    </button>
+                </h2>
+                <div id="blog9" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingEight">
+                    <div class="text-center my-5"><span class="spinner-border" role="status"></span><p>Loading...</p></div>
+                </div>
+            </div>  -->
+            <!-- accodion-item closing div -->
+
             <div class="accordion-item">
                 <h2 class="accordion-header">
                     <button id='blog8Button' onclick="blog8Open()" class="accordion-button collapsed bg-transparent"
@@ -289,6 +308,7 @@
     <!-- My JS -->
     <script src="../js/navbar.js"></script>
     <script src='../js/blog.js'></script>
+    <!-- <script src='../js/blogs/blog9.js'></script> -->
     <script src='../js/blogs/blog8.js'></script>
     <script src='../js/blogs/blog7.js'></script>
     <script src='../js/blogs/blog6.js'></script>
